@@ -1,3 +1,8 @@
+2006-11-18  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/pygobject.c (pygobject_register_class): set __module__ on
+	gobject derived types, fixes #376099
+
 2006-11-18  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	reviewed by: Johan Dahlin  <johan@gnome.org>
